<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.skylab.donepaper.donepaper.activities.LoginActivity">

    <ImageView
        android:id="@+id/close_button_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/close_activity"
        android:src="@drawable/icon_close" />

    <!--<ImageView-->
        <!--android:id="@+id/logo_image"-->
        <!--android:layout_width="255dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="50dp"-->
        <!--android:contentDescription="@string/logo_done_paper"-->
        <!--android:src="@drawable/done_paper_logo" />-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_image"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_allcap"
            android:inputType="textEmailAddress"
            app:backgroundTint="#e8e8e9" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_input_layout"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/pass_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:backgroundTint="#e8e8e9" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/reset_pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/email_input_layout"
        android:layout_gravity="end"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="40dp"
        android:text="@string/forgot_password_reset"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent">

        <Button
            android:id="@+id/login_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    </FrameLayout>

</RelativeLayout>


