<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_header"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorHeader"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/name"
        android:textColor="@color/colorNameHeader"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/current_user_name_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/name_header"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/email_header"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/current_user_name_text"
        android:background="@color/colorHeader"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/email"
        android:textColor="@color/colorNameHeader"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/current_user_email_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/email_header"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/current_user_email_text"
        android:background="@color/colorHeader" />

    <TextView
        android:id="@+id/choose_another_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_user_email_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/choose_another_account"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/logged_terms_of_service_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_another_account_text"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorHeader"
        android:text="@string/terms_of_service"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:layout_above="@id/continue_layout">

        <TextView
            android:id="@+id/total_text_step3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="96dp"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:text="@string/total"/>

        <TextView
            android:id="@+id/total_price_step3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </RelativeLayout>

    <FrameLayout
        android:id="@id/continue_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/place_order_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/place_order"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    </FrameLayout>

</RelativeLayout>