<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/step_one_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <FrameLayout
            android:id="@+id/step_two_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <FrameLayout
            android:id="@+id/step_three_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false">


        <RelativeLayout
            android:id="@+id/step_circles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:clipChildren="false"
            android:paddingEnd="14dp"
            android:paddingStart="14dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="14dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/step_one_circle"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/step_circle"
                    android:gravity="center"
                    android:text="@string/_1"
                    android:textColor="@color/colorPrimaryDark" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:indeterminate="false"
                    android:progress="0" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/step_three_circle"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/step_circle"
                    android:gravity="center"
                    android:text="@string/_3"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/step_two_circle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:background="@drawable/step_circle"
                android:gravity="center"
                android:text="@string/_2"
                android:textColor="@color/colorPrimaryDark" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/step_circles"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:paddingEnd="14dp"
            android:paddingStart="14dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/step_one_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_one_text"
                android:textColor="@color/colorAccent" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/step_two_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/step_two_text"
                android:textColor="@color/colorTextTint" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/step_three_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/step_three_text"
                android:textColor="@color/colorTextTint" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>